i#1805: fix drstrace link errors
Fixes link errors in drstrace by removing the drinjectlib link and solving
the DRi#1409 link issues via link flags instead of target_link_libraries,
to ensure particular library ordering.

Fixes #1805

Review-URL: https://codereview.appspot.com/268710043

--- a/drstrace/CMakeLists.txt
+++ b/drstrace/CMakeLists.txt
@@ -161,9 +161,14 @@ if (WIN32)
   use_DynamoRIO_extension(drstrace_unit_tests drmgr_static)
   use_DynamoRIO_extension(drstrace_unit_tests drx_static)
   use_DynamoRIO_extension(drstrace_unit_tests drsyms_static)
-  # XXX DRi#1409/DRi#1503: we get link errors about dup symbols dr_get_stderr_file()
-  # in drdecode and dynamorio libs unless we link w/ drinjectlib.
-  target_link_libraries(drstrace_unit_tests drinjectlib drfrontendlib)
+  # XXX DRi#1409/DRi#1503/i#1805: we get link errors about dup symbols
+  # dr_get_stderr_file() in drdecode and dynamorio libs unless we link w/
+  # drinjectlib, and if we link w/ drinjectlib we get duplicate IR link errors
+  # w/ drdecode (i#1805).  We solve by moving drfrontendlib earlier via the link
+  # flags.
+  get_target_property(drfront_path drfrontendlib LOCATION${location_suffix})
+  append_property_string(TARGET drstrace_unit_tests LINK_FLAGS ${drfront_path})
+  add_dependencies(drstrace_unit_tests drfrontendlib)
   add_dependencies(drstrace_unit_tests drsyscall)
   add_test(drstrace_unit_tests
            "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/drstrace_unit_tests")
