i#1734 drfuzz: add several fuzz options
- add several fuzz options, including:
  -fuzz, -fuzz_module, -fuzz_function, -fuzz_offset, -fuzz_num_args,
  -fuzz_data_idx, -fuzz_size_idx, and -fuzz_num_iters
- rename fuzzer_fuzz_option_target to fuzzer_option_init
- add fuzzer_fuzz_target_init
- extract fuzzer_fuzz_target_callconv_arg_init

Review-URL: https://codereview.appspot.com/276780043

--- a/tests/fuzz/CMakeLists.txt
+++ b/tests/fuzz/CMakeLists.txt
@@ -47,9 +47,9 @@ else (UNIX)
 endif (UNIX)
 
 # fuzz the c target
-set(fuzz_buffer_drmem_ops "-fuzz_target;<main>!repeatme|2|0|1|10")
 newtest_ex(fuzz_buffer fuzz_buffer.c
-  "initialize" "${fuzz_buffer_drmem_ops}" "" OFF "" 0)
+  "initialize" "-fuzz_function;repeatme;-fuzz_num_iters;10" "" OFF "" 0)
+set(fuzz_buffer_drmem_ops "-fuzz_target;<main>!repeatme|2|0|1|10")
 set(mutator_drmem_ops "-fuzz_mutator;o|b|r|3")
 newtest_nobuild_ex(fuzz_buffer.mutator.o-b-s-3 fuzz_buffer
   "initialize" "${fuzz_buffer_drmem_ops};${mutator_drmem_ops}" "" OFF "" 0 "")
