i#1734 drfuzz: add -fuzz_dump_on_error
- add -fuzz_dump_on_error option and dump binary data on error reports

Review-URL: https://codereview.appspot.com/279900043

--- a/tests/fuzz/CMakeLists.txt
+++ b/tests/fuzz/CMakeLists.txt
@@ -49,7 +49,7 @@ endif (UNIX)
 # fuzz the c target
 newtest_ex(fuzz_buffer fuzz_buffer.c
   "initialize" "-fuzz_function;repeatme;-fuzz_num_iters;10" "" OFF "" 0)
-set(fuzz_buffer_drmem_ops "-fuzz_target;<main>!repeatme|2|0|1|10")
+set(fuzz_buffer_drmem_ops "-no_fuzz_dump_on_error;-fuzz_target;<main>!repeatme|2|0|1|10")
 set(mutator_drmem_ops "-fuzz_mutator;o|b|r|3")
 newtest_nobuild_ex(fuzz_buffer.mutator.o-b-s-3 fuzz_buffer
   "initialize" "${fuzz_buffer_drmem_ops};${mutator_drmem_ops}" "" OFF "" 0 "")
@@ -105,7 +105,7 @@ if (NOT UNIX AND NOT X64)
 endif (NOT UNIX AND NOT X64)
 set(fuzz_buffer_symbol "fuzz_buffer.cpp${app_extension}!${fuzz_buffer_cpp_symbol}")
 set(fuzz_buffer_drmem_ops
-  "-fuzz_target;${fuzz_buffer_symbol}|3|1|2|10${cpp_callconv}${enable_mangled_names}")
+  "-no_fuzz_dump_on_error;-fuzz_target;${fuzz_buffer_symbol}|3|1|2|10${cpp_callconv}${enable_mangled_names}")
 newtest_ex(fuzz_buffer.cpp fuzz_buffer.cpp "initialize"
   "${fuzz_buffer_drmem_ops}" "" OFF "" 0)
 if (NOT X64) # test detection of errors that requires shadow-memory
