--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,13 +27,6 @@ cmake_minimum_required(VERSION 2.8.10.1)
 
 include(make/policies.cmake NO_POLICY_SCOPE)
 
-# The target OS:
-if (APPLE)
-  set(MACOS 1)
-elseif (UNIX)
-  set(LINUX 1)
-endif (APPLE)
-
 # like DR, we collapse VS generator into one config since
 # we don't have enough control over output dirs
 # in build rules (until cmake 2.8.4).
@@ -74,6 +67,20 @@ if (DEFINED GENERATE_PDBS AND NOT GENERATE_PDBS)
 endif ()
 enable_language(C)
 enable_language(CXX)
+
+# The target OS:
+if (APPLE)
+  set(MACOS 1)
+elseif (UNIX)
+  set(LINUX 1)
+endif (APPLE)
+
+# The target arch:
+if (CMAKE_SYSTEM_PROCESSOR MATCHES "^arm")
+  set(ARM 1)
+else ()
+  set(X86 1)
+endif ()
 
 if (UNIX)
   set(DEFINES ${DEFINES} -DUNIX)
