i#1726 port to ARM: refactor slowpath.c into slowpath_x86.c
Performs a refactoring of slowpath.c into cross-platform code remaining in
slowpath.c but all x86-specific code moving to a new file, slowpath_x86.c,
which will be paralleled by slowpath_arm.c.

Many routines were completely moved to the arch-specific file.  Others were
split into two with an _arch() routine for the arch-specific code.

Adds a new header slowpath_arch.h for sharing defines and declarations
between slowpath.c and slowpath_<arch>.c.

Updates some shared code that is not being moved to be cross-platform,
including renaming eflags constants and wrapping OP_lea checks, but there
are a few more places that will need to be updated later for the ARM port.

Review-URL: https://codereview.appspot.com/276470043

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1012,6 +1012,7 @@ if (TOOL_DR_HEAPSTAT)
     drmemory/instru.c
     drmemory/spill.c
     drmemory/slowpath.c
+    drmemory/slowpath_x86.c
     drmemory/fastpath.c
     drmemory/shadow.c
     drmemory/perturb.c)
@@ -1023,6 +1024,7 @@ else (TOOL_DR_HEAPSTAT)
     drmemory/instru.c
     drmemory/spill.c
     drmemory/slowpath.c
+    drmemory/slowpath_x86.c
     drmemory/fastpath.c
     drmemory/stack.c
     drmemory/shadow.c
