i#1726 port to ARM: add slowpath_arm.c template
Adds slowpath_arm.c with empty routines in order to build slowpath.c for
pattern mode on ARM.

Also fixes and improves several misc ARM porting and general refactoring
issues.

Changes opc_is_jcc() to instr_is_jcc() to handle ARM predicates.

Review-URL: https://codereview.appspot.com/278540043

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1012,7 +1012,6 @@ if (TOOL_DR_HEAPSTAT)
     drmemory/instru.c
     drmemory/spill.c
     drmemory/slowpath.c
-    drmemory/slowpath_x86.c
     drmemory/fastpath.c
     drmemory/shadow.c
     drmemory/perturb.c)
@@ -1024,7 +1023,6 @@ else (TOOL_DR_HEAPSTAT)
     drmemory/instru.c
     drmemory/spill.c
     drmemory/slowpath.c
-    drmemory/slowpath_x86.c
     drmemory/fastpath.c
     drmemory/stack.c
     drmemory/shadow.c
@@ -1061,6 +1059,12 @@ else (TOOL_DR_HEAPSTAT)
   endif (UNIX)
   set(scripts ${toolname}.pl)
 endif (TOOL_DR_HEAPSTAT)
+
+if (X86)
+  set(srcs ${srcs} drmemory/slowpath_x86.c)
+else ()
+  set(srcs ${srcs} drmemory/slowpath_arm.c)
+endif ()
 
 if (WIN32)
   set(srcs ${srcs} make/resources.rc)
