i#1726 port to ARM: refactor stack.c into stack_{x86,arm}.c
Performs a refactoring of stack.c into cross-platform code remaining in
stack.c but all x86-specific code moving to a new file, stack_x86.c,
which is paralleled by another new file stack_arm.c.

About half the routines were completely moved to the arch-specific file and
the other half are already neutral or were tweaked slightly to become
cross-platform.

Adds a new header stack_arch.h for sharing defines and declarations
between stack.c and stack_<arch>.c.

Adds stack_arm.c with empty routines in order to build stack.c for
pattern mode on ARM.  Probably some of the code in stack_x86.c can be
shared with stack_arm.c once we start implementing them for ARM.

Review-URL: https://codereview.appspot.com/284780043

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1062,8 +1062,10 @@ endif (TOOL_DR_HEAPSTAT)
 
 if (X86)
   set(srcs ${srcs} drmemory/slowpath_x86.c)
+  set(srcs ${srcs} drmemory/stack_x86.c)
 else ()
   set(srcs ${srcs} drmemory/slowpath_arm.c)
+  set(srcs ${srcs} drmemory/stack_arm.c)
 endif ()
 
 if (WIN32)
