i#1726 port to ARM: refactor fastpath.c into fastpath_{x86,arm}.c
Performs a refactoring of fastpath.c into cross-platform code remaining in
fastpath.c but all x86-specific code moving to a new file, fastpath_x86.c,
which is paralleled by another new file fastpath_arm.c.

To get the ARM pattern mode building, nearly every routine was moved to
fastpath_x86.c.  Further refactoring and sharing will be done in the
future.

Review-URL: https://codereview.appspot.com/280460043

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1063,9 +1063,11 @@ endif (TOOL_DR_HEAPSTAT)
 if (X86)
   set(srcs ${srcs} drmemory/slowpath_x86.c)
   set(srcs ${srcs} drmemory/stack_x86.c)
+  set(srcs ${srcs} drmemory/fastpath_x86.c)
 else ()
   set(srcs ${srcs} drmemory/slowpath_arm.c)
   set(srcs ${srcs} drmemory/stack_arm.c)
+  set(srcs ${srcs} drmemory/fastpath_arm.c)
 endif ()
 
 if (WIN32)
