i#1734 DrFuzz custom mutators: refactor mutator into separable API
Refactors how mutators work by isolating the mutator API into a set of
function pointers that can come from a third-party library.  Avoids having
to deploy the default mutator as a separate library by simply setting up
the function pointers to point at included functions, while still providing
a common interface for default and custom mutators.

Exports a separate shared library containing the default mutator, for
third-party mutators that wish to extend it via interactions purely at the
API level.

Refactors mutator options into an argv-style array passed to the mutator,
to facilitate third-party custom mutators.  This means that the
drfuzz_mutator_options_t is no longer a public struct, and its
Doxygen documentation is hereby moved to drfuzz.dox.

Eliminates the -fuzz_mutator packed descriptor in favor of separate
Dr. Memory frontend options for each default mutator option, which is then
passed through in the argv array to the mutator itself.

Moves the clock seed option from Dr. Memory into Dr. Fuzz as a flag option
to the default mutator.

Updates the tests and the release notes accordingly.

Review-URL: https://codereview.appspot.com/276490043

--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -1,5 +1,5 @@
 # **********************************************************
-# Copyright (c) 2011-2014 Google, Inc.  All rights reserved.
+# Copyright (c) 2011-2015 Google, Inc.  All rights reserved.
 # Copyright (c) 2009-2010 VMware, Inc.  All rights reserved.
 # **********************************************************
 
@@ -62,6 +62,7 @@ set(headers
   ${PROJECT_SOURCE_DIR}/drsymcache/drsymcache.h
   ${PROJECT_SOURCE_DIR}/umbra/umbra.h
   ${PROJECT_SOURCE_DIR}/drfuzz/drfuzz.h
+  ${PROJECT_SOURCE_DIR}/drfuzz/drfuzz_mutator.h
   ${PROJECT_SOURCE_DIR}/framework/public.h)
 
 # some defines are set by DR config files so we must add here
