i#1843 dictionary mutation: add dictionary mutation to drfuzz
Adds dictionary token-based mutation support to Dr. Fuzz and Dr. Memory:

Adds a new Dr. Memory option -fuzz_dictionary.
Adds corresponding Dr. Fuzz options -unit token and -dictionary.
Adds documentation of these options and of the dictionary file format,
which matches the AFL format.
Changes the default mutation algorithm to "random" for dictionary-based
fuzzing.

Adds dictionary parsing code, which supports binary tokens by
storing each token in a variable-sized struct inside a drvector.

Adds a new file drfuzz_shared.h for DRFUZZ_LOG() and other shared defines.

Adds token-based mutation, which follows the simple corpus-based approach
of AFL and other fuzzers: we do not try to parse the input buffer into
tokens or have any mapping from an internal buffer to the input buffer.
Instead, we simply insert a token from the dictionary into the input
buffer as our mutation, picking the token and its insertion point at random
for the random algorithm.  We do insert whitespace around it, assuming that
spaces are proper delimiters.

Renames MUTATOR_FLAG_BITFLIP_SEED_CENTRIC to MUTATOR_FLAG_SEED_CENTRIC as
it also applies to tokens.

Adds dictionary tests to drfuzz_client_mutator and to the Dr. Memory
fuzz_buffer set of tests.

Fixes #1843

Review-URL: https://codereview.appspot.com/280650043

--- a/tests/fuzz/CMakeLists.txt
+++ b/tests/fuzz/CMakeLists.txt
@@ -1,5 +1,5 @@
 # **********************************************************
-# Copyright (c) 2012-2015 Google, Inc.  All rights reserved.
+# Copyright (c) 2012-2016 Google, Inc.  All rights reserved.
 # **********************************************************
 
 # Dr. Memory: the memory debugger
@@ -111,6 +111,10 @@ newtest_nobuild_ex(fuzz_buffer.offset fuzz_buffer
 set(fuzz_buffer_drmem_ops "-fuzz_target;fuzz_buffer${app_extension}!repeatme|2|0|1|10")
 newtest_nobuild_ex(fuzz_buffer.module_name fuzz_buffer
   "initialize" "${fuzz_buffer_drmem_ops}" "" OFF "" 0 "")
+set(fuzz_dictionary_drmem_ops
+  "-fuzz_function;repeatme;-fuzz_dictionary;${CMAKE_CURRENT_SOURCE_DIR}/dictionary.txt")
+newtest_nobuild_ex(fuzz_buffer.dictionary fuzz_buffer
+  "initialize" "${fuzz_dictionary_drmem_ops};-fuzz_mutator_alg;ordered" "" OFF "" 0 "")
 
 # fuzz the cpp target
 if (NOT UNIX AND NOT X64)
